test/regress/cov6-amount-parse-bad-comma.test
; Test parse error for incorrect thousand-mark comma after period
; Covers amount.cc line 1257 (thousand-mark comma error)

2024/01/01 Test
    Expenses:Food    1,23.456 USD
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing posting:
  Expenses:Food    1,23.456 USD
                   ^^^^^^^^^^^^
Error: Incorrect use of thousand-mark comma
end test
